# sati

./: LICENSE  README.md  main.py  pyproject.toml  record_sample.csv  requirements.txt  sati.py
