[project]
name = "satbar"
version = "0.1.0"
description = "Analysis of satellites and geomagnetism"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aacgmv2==2.7.0",
    "apexpy>=2.1.0",
    "astropy>=7.1.0",
    "cartopy==0.24.1",
    "certifi==2025.6.15",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.58.5",
    "jinja2>=3.1.6",
    "jplephem==2.23",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "memory-profiler>=0.61.0",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "pyproj==3.7.1",
    "pyshp==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "sgp4==2.24",
    "shapely==2.1.1",
    "six==1.17.0",
    "skyfield==1.53",
    "tabulate>=0.9.0",
    "tzdata==2025.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
